# inference-engine

./: .gitignore  .gitmodules  Cargo.toml  README.md
benchmarks/: bench.sh  history.csv  report.py  vast_setup.sh
course/: __init__.py  _model.py  main.py  pyproject.toml
course/inference/: 00_why_inference_is_hard.py  01_autoregressive_loop.py  02_kv_cache.py  03_batching.py  04_quantization.py  05_attention_optimizations.py  06_speculative_decoding.py  07_distributed.py  08_serving.py  09_production.py  __init__.py  run.py
course/notes/: fundamental_assumptions.md  tensor_design_inefficiencies.md
course/transformer/: 00_prerequisites.py  01_tokenization.py  02_embeddings.py  03_simple_attention.py  04_self_attention.py  05_multi_head_attention.py  06_transformer_block.py  07_mini_gpt.py  08_training.py  09_advanced_topics.py  10_alignment.py  __init__.py  run.py
src/: api.rs  llama.rs  main.rs
