[package]
name = "infer"
version = "0.1.0"
edition = "2024"

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[dependencies]
anyhow = "1"
candle-core = { version = "0.11.0", default-features = false }
candle-nn = { version = "0.11.0", default-features = false }
candle-transformers = { version = "0.11.0", default-features = false }
hf-hub = "0.4"
serde_json = "1"
tokenizers = "0.21"
rand = "0.8"

# HTTP server + CLI
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
futures-core = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
